<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@drawable/lobby_bg"
	tools:context=".MultiplayerActivity">

	<TextView
		android:id="@+id/status"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/status_waiting" />

	<ListView
		android:id="@+id/gameList"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="9">



	</ListView>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal">

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/hostmp"
			android:onClick="host"/>

		<Button
			android:id="@+id/join"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/join"
			android:onClick="join"
			android:enabled="false" />

		<Button
			android:id="@+id/refresh"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/refresh"
			android:enabled="false"
			android:onClick="refresh" />

	</LinearLayout>

</LinearLayout>