<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/root"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="horizontal"
	android:background="@drawable/lobby_bg">

	<LinearLayout
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:orientation="vertical">

		<TextView
			android:id="@+id/p1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/waiting_player"
			android:textSize="20sp"
			android:typeface="monospace" />

		<TextView
			android:id="@+id/p2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/waiting_player"
			android:textSize="20sp"
			android:typeface="monospace" />

		<TextView
			android:id="@+id/p3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/waiting_player"
			android:textSize="20sp"
			android:typeface="monospace" />

		<TextView
			android:id="@+id/p4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/waiting_player"
			android:textSize="20sp"
			android:typeface="monospace" />

		<TextView
			android:id="@+id/p5"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/waiting_player"
			android:textSize="20sp"
			android:typeface="monospace" />

		<TextView
			android:id="@+id/p6"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/waiting_player"
			android:textSize="20sp"
			android:typeface="monospace" />

		<TextView
			android:id="@+id/p7"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/waiting_player"
			android:textSize="20sp"
			android:typeface="monospace" />

		<TextView
			android:id="@+id/p8"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/waiting_player"
			android:textSize="20sp"
			android:typeface="monospace" />

		<TextView
			android:id="@+id/p9"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/waiting_player"
			android:textSize="20sp"
			android:typeface="monospace" />

		<!-- TODO podpora za več igralcev -->

	</LinearLayout>

	<LinearLayout
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:gravity="top"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/server"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="top"
			android:orientation="horizontal">

			<Button
				android:id="@+id/start"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:background="@drawable/gumb_off"
				android:enabled="false"
				android:text="@string/lobby_start"
				android:onClick="startButton"/>

			<Switch
				android:id="@+id/ready"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lobby_ready" />

		</LinearLayout>

	</LinearLayout>

</LinearLayout>